--- a/Desafio 2/css/main.css
+++ b/Desafio 2/css/main.css
@@ -10,6 +10,7 @@
 
 
 header{
+    
     width: 100%;
     height: 8%;
 }
@@ -23,6 +24,8 @@ header{
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 
@@ -60,16 +63,51 @@ header{
 
 footer{
     width: 100%;
-    height: 4%;
-    background-color: chartreuse;
+    height: 4vh;
+    background-color: #00AEFF;
 }
 
-.content{
-    height: 58%;
-    width: 100%;
-    background-color: var(--white);
-    text-align: center;
+
+@media (max-width: 900px) {
+    .content{
+        height: auto;
+        width: 100%;
+        background-color: var(--white);
+        
+        text-align: center;
+    }
+    
 }
+
+@media (min-width: 910px) {
+    .content{
+        height: 58vh;
+        width: 100%;
+        background-color: var(--white);
+        overflow: hidden;
+
+        text-align: center;
+        
+    }
+    
+}
+
+.content p {
+    font-size: 1rem;
+    font-family: 'Montserrat Light';
+    margin-top: 10px;
+}
+
+.contentText{
+    margin-top: 40px;
+}
+
+.content span{
+    font-size: 1.2rem;
+    font-family: 'Montserrat Bold';
+    
+}
+
 
 .cupom{
     display: flex;
@@ -103,32 +141,48 @@ footer{
 }
 
 
-
-
-
-
 .produtos{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+    max-width: 80%;
+    height: auto;
+
+
+    display: flex;
+    overflow: hidden;
+    flex-wrap: wrap;
+
+    margin: 20px auto;
+}
+
+.produto{
+    flex: 1 1 300px;
     
-    .produto{
-        width: calc(25% - 10px); /* Subtraindo 10px da largura para adicionar o espaçamento entre as colunas */
-        height: 100px;
-        margin-bottom: 20px;
-        background-color: #ccc;
-    }
+    background-color: #ddd;
+    
+    min-width: 180px;
+    margin: 10px;
+    min-height:180px ;
+    display: flex;
+}
 
 
 .tenis{
-    width: 60%;
-    height: 60%;
-    object-fit: cover;
-    position: relative;
-    top: 0;
-    left: 0;
+   position: relative;
+   top: 40px;
+   left: 50px;
+    width: 70%;
+    height: 70%;
 }
+
+
+
+
+
+
+
+
+
+
+
     
 
 
